--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@ckeditor/ckeditor5-build-classic",
-  "version": "12.2.0",
-  "description": "The classic editor build of CKEditor 5 – the best browser-based rich text editor.",
+  "name": "@ckeditor/ckeditor5-build-xstudio",
+  "version": "1.0.0",
+  "description": "xstudio's ckeditor5 build extends from ckeditor-build-classic",
   "keywords": [
     "ckeditor5-build",
     "ckeditor",
@@ -25,24 +25,33 @@
     "build"
   ],
   "devDependencies": {
+    "@ckeditor/": "ckeditor/ckeditor5-alignment",
     "@ckeditor/ckeditor5-adapter-ckfinder": "^11.0.2",
+    "@ckeditor/ckeditor5-alignment": "^11.1.1",
     "@ckeditor/ckeditor5-autoformat": "^11.0.2",
+    "@ckeditor/ckeditor5-autosave": "^11.0.2",
     "@ckeditor/ckeditor5-basic-styles": "^11.1.1",
     "@ckeditor/ckeditor5-block-quote": "^11.1.0",
     "@ckeditor/ckeditor5-ckfinder": "^11.0.2",
+    "@ckeditor/ckeditor5-clipboard": "^11.0.2",
     "@ckeditor/ckeditor5-core": "^12.1.1",
     "@ckeditor/ckeditor5-dev-utils": "^12.0.0",
     "@ckeditor/ckeditor5-dev-webpack-plugin": "^8.0.0",
     "@ckeditor/ckeditor5-easy-image": "^11.0.2",
     "@ckeditor/ckeditor5-editor-classic": "^12.1.1",
+    "@ckeditor/ckeditor5-enter": "^11.0.2",
     "@ckeditor/ckeditor5-essentials": "^11.0.2",
+    "@ckeditor/ckeditor5-font": "^11.1.1",
     "@ckeditor/ckeditor5-heading": "^11.0.2",
+    "@ckeditor/ckeditor5-highlight": "^11.0.2",
     "@ckeditor/ckeditor5-image": "^13.1.0",
     "@ckeditor/ckeditor5-link": "^11.0.2",
     "@ckeditor/ckeditor5-list": "^12.0.2",
     "@ckeditor/ckeditor5-media-embed": "^11.1.1",
+    "@ckeditor/ckeditor5-mention": "^11.0.0",
     "@ckeditor/ckeditor5-paragraph": "^11.0.2",
     "@ckeditor/ckeditor5-paste-from-office": "^11.0.2",
+    "@ckeditor/ckeditor5-remove-format": "^10.0.1",
     "@ckeditor/ckeditor5-table": "^13.0.0",
     "@ckeditor/ckeditor5-theme-lark": "^14.0.0",
     "eslint": "^5.5.0",
@@ -60,13 +69,13 @@
     "node": ">=8.0.0",
     "npm": ">=5.7.1"
   },
-  "author": "CKSource (http://cksource.com/)",
+  "author": "beeant0512",
   "license": "GPL-2.0-or-later",
   "homepage": "https://ckeditor.com/ckeditor-5",
-  "bugs": "https://github.com/ckeditor/ckeditor5-build-classic/issues",
+  "bugs": "https://github.com/beeant0512/ckeditor5-build-classic/issues",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ckeditor/ckeditor5-build-classic.git"
+    "url": "https://github.com/beeant0512/ckeditor5-build-classic.git"
   },
   "scripts": {
     "build": "webpack --mode production",
